syntax = "proto3";
package user_service;
option go_package = "./;pb";
import "google/protobuf/timestamp.proto";
message User {
    string email = 1;
    string full_name = 2;
    string phone_number = 3;
    google.protobuf.Timestamp date_of_birth = 4;
    string id_card = 5;
    int32 member_card = 6;
}

message SignupRequest{
    User user = 1;
    string password = 2;
}

message SignupResponse {
    bool success = 1;
    string message = 2;
}

message SigninRequest {
    string email = 1;
    string password = 2;
}

message SigninResponse {
    bool success = 1;
    string message = 2;
    string token = 3;
    google.protobuf.Timestamp expiration = 4;
}

service userService { 
    rpc Signup(SignupRequest) returns (SignupResponse);
    rpc Signin(SigninRequest) returns (SigninResponse);
    rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse);
}
message GetUserInfoRequest {
    string user_id = 1;
}
message GetUserInfoResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}